Optimized batch update (#216)
* Drop indexes for batch update

* Use saveAll()

* Silence error for index race

* Move index droping to manual action

* Use transaction instead of saveAll

* Don't run scheduled tasks if already running

* Use tag to pull

* Optimized push

* Backfill refs
